--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,30 +39,30 @@ include:
     ref: 59834935f116dce106fdf9fb98e44a6f646f5eba # It seems a variable cannot be used here
     file: '/templates/test_jobs.gitlab-ci.yml'
 
-prepare_hived_image:
-  extends: .prepare_hived_image
-  stage: build
-  variables:
-    SUBMODULE_DIR: "$CI_PROJECT_DIR/haf/hive"
-    REGISTRY_USER: "$HIVED_CI_IMGBUILDER_USER"
-    REGISTRY_PASS: $HIVED_CI_IMGBUILDER_PASSWORD
-  tags:
-    - public-runner-docker
-    - hived-for-tests
+# prepare_hived_image:
+#   extends: .prepare_hived_image
+#   stage: build
+#   variables:
+#     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf/hive"
+#     REGISTRY_USER: "$HIVED_CI_IMGBUILDER_USER"
+#     REGISTRY_PASS: $HIVED_CI_IMGBUILDER_PASSWORD
+#   tags:
+#     - public-runner-docker
+#     - hived-for-tests
 
-prepare_hived_data:
-  extends: .prepare_hived_data_5m
-  needs:
-    - job: prepare_hived_image
-      artifacts: true
-  stage: build
-  variables:
-    SUBMODULE_DIR: "$CI_PROJECT_DIR/haf/hive"
-    BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
-    CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/hive/docker/config_5M.ini"
-  resource_group: ${CI_COMMIT_SHA}
-  tags:
-    - data-cache-storage
+# prepare_hived_data:
+#   extends: .prepare_hived_data_5m
+#   needs:
+#     - job: prepare_hived_image
+#       artifacts: true
+#   stage: build
+#   variables:
+#     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf/hive"
+#     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
+#     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/hive/docker/config_5M.ini"
+#   resource_group: ${CI_COMMIT_SHA}
+#   tags:
+#     - data-cache-storage
 
 prepare_haf_image:
   extends: .prepare_haf_image
@@ -75,19 +75,19 @@ prepare_haf_image:
     - public-runner-docker
     - hived-for-tests
 
-prepare_haf_data:
-  extends: .prepare_haf_data_5m
-  needs:
-    - job: prepare_haf_image
-      artifacts: true
-  stage: build
-  variables:
-    SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
-    BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
-    CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/docker/config_5M.ini"
-  resource_group: ${CI_COMMIT_SHA}
-  tags:
-    - data-cache-storage
+# prepare_haf_data:
+#   extends: .prepare_haf_data_5m
+#   needs:
+#     - job: prepare_haf_image
+#       artifacts: true
+#   stage: build
+#   variables:
+#     SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
+#     BLOCK_LOG_SOURCE_DIR: $BLOCK_LOG_SOURCE_DIR_5M
+#     CONFIG_INI_SOURCE: "$CI_PROJECT_DIR/haf/docker/config_5M.ini"
+#   resource_group: ${CI_COMMIT_SHA}
+#   tags:
+#     - data-cache-storage
 
 .prepare_hafah_image:
   extends: .docker_image_builder_job
@@ -118,11 +118,11 @@ prepare_haf_data:
     - public-runner-docker
     - hived-for-tests
 
-prepare_python_hafah_image:
-  extends: .prepare_hafah_image
-  variables:
-    HAFAH_IMAGE_TAG: python-$CI_COMMIT_SHORT_SHA
-    USE_POSTGREST: 0
+# prepare_python_hafah_image:
+#   extends: .prepare_hafah_image
+#   variables:
+#     HAFAH_IMAGE_TAG: python-$CI_COMMIT_SHORT_SHA
+#     USE_POSTGREST: 0
 
 prepare_postgrest_hafah_image:
   extends: .prepare_hafah_image
@@ -130,214 +130,214 @@ prepare_postgrest_hafah_image:
     HAFAH_IMAGE_TAG: postgrest-$CI_COMMIT_SHORT_SHA
     USE_POSTGREST: 1
 
-.pattern_tests:
-  extends: .pattern_tests_template
-  stage: test
-  variables:
-    FF_NETWORK_PER_BUILD: 1
-    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
-    APP_IMAGE: ""
-    TEST_SUITE: "condenser_api_patterns/get_transaction and not get_transaction_hex or account_history_api or condenser_api_patterns/get_account_history or condenser_api_patterns/get_ops_in_block"
-    DIRECT_HAFAH_CALLS: 0
-    HIVED_UID: $HIVED_UID
+# .pattern_tests:
+#   extends: .pattern_tests_template
+#   stage: test
+#   variables:
+#     FF_NETWORK_PER_BUILD: 1
+#     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
+#     APP_IMAGE: ""
+#     TEST_SUITE: "condenser_api_patterns/get_transaction and not get_transaction_hex or account_history_api or condenser_api_patterns/get_account_history or condenser_api_patterns/get_ops_in_block"
+#     DIRECT_HAFAH_CALLS: 0
+#     HIVED_UID: $HIVED_UID
 
-  needs:
-    - job: prepare_haf_data
-      artifacts: true
+#   needs:
+#     - job: prepare_haf_data
+#       artifacts: true
 
-  before_script:
-    - echo "HAfAH image name $APP_IMAGE"
-    - echo "HAF image name $HAF_IMAGE_NAME"
+#   before_script:
+#     - echo "HAfAH image name $APP_IMAGE"
+#     - echo "HAF image name $HAF_IMAGE_NAME"
 
-  script:
-    - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
-    # run pattern tests
-    - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/pattern_tests
-    - ./run_tests.sh $ENDPOINT `git rev-parse --show-toplevel` "${TEST_SUITE}" ${DIRECT_HAFAH_CALLS}
+#   script:
+#     - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt
+#     # run pattern tests
+#     - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/pattern_tests
+#     - ./run_tests.sh $ENDPOINT `git rev-parse --show-toplevel` "${TEST_SUITE}" ${DIRECT_HAFAH_CALLS}
 
-  artifacts:
-    paths:
-    - "$CI_JOB_NAME"
-    - "**/from_node.log"
-    - "**/ah.log"
-    - "**/*.out.json"
-    - "tests/tests_api/hived/workdir_*"
-    - "tests/api_tests/pattern_tests/results.xml"
-    reports:
-      junit: haf/hive/tests/api_tests/pattern_tests/results.xml
-  resource_group: ${CI_COMMIT_SHA}
-  tags:
-    - data-cache-storage
+#   artifacts:
+#     paths:
+#     - "$CI_JOB_NAME"
+#     - "**/from_node.log"
+#     - "**/ah.log"
+#     - "**/*.out.json"
+#     - "tests/tests_api/hived/workdir_*"
+#     - "tests/api_tests/pattern_tests/results.xml"
+#     reports:
+#       junit: haf/hive/tests/api_tests/pattern_tests/results.xml
+#   resource_group: ${CI_COMMIT_SHA}
+#   tags:
+#     - data-cache-storage
 
-python_pattern_tests:
-  extends: .pattern_tests
+# python_pattern_tests:
+#   extends: .pattern_tests
 
-  needs:
-    - !reference [.pattern_tests, needs]
-    - job: prepare_python_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.pattern_tests, needs]
+#     - job: prepare_python_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
 
-postgrest_pattern_tests:
-  extends: .pattern_tests
+# postgrest_pattern_tests:
+#   extends: .pattern_tests
 
-  needs:
-    - !reference [.pattern_tests, needs]
-    - job: prepare_postgrest_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.pattern_tests, needs]
+#     - job: prepare_postgrest_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
 
-new_style_postgrest_pattern_tests:
-  extends: .pattern_tests
+# new_style_postgrest_pattern_tests:
+#   extends: .pattern_tests
 
-  needs:
-    - !reference [.pattern_tests, needs]
-    - job: prepare_postgrest_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.pattern_tests, needs]
+#     - job: prepare_postgrest_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
-    # Direct call version does not support condenser_api
-    TEST_SUITE: "account_history_api"
-    DIRECT_HAFAH_CALLS: 1
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
+#     # Direct call version does not support condenser_api
+#     TEST_SUITE: "account_history_api"
+#     DIRECT_HAFAH_CALLS: 1
 
-.comparison_tests:
-  extends: .comparison_tests_template
-  stage: test
-  variables:
-    FF_NETWORK_PER_BUILD: 1
-    PYTHONPATH: "$CI_PROJECT_DIR/tests/test-tools/package"
-    HIVED_UID: $HIVED_UID
+# .comparison_tests:
+#   extends: .comparison_tests_template
+#   stage: test
+#   variables:
+#     FF_NETWORK_PER_BUILD: 1
+#     PYTHONPATH: "$CI_PROJECT_DIR/tests/test-tools/package"
+#     HIVED_UID: $HIVED_UID
 
-  needs:
-    - job: prepare_haf_data
-      artifacts: true
-    - job: prepare_hived_data
-      artifacts: true
+#   needs:
+#     - job: prepare_haf_data
+#       artifacts: true
+#     - job: prepare_hived_data
+#       artifacts: true
 
-  script:
-    - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools"
-      # run comparsion tests
-    - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
-    - python3 -m pytest -n 8 --ref http://$HIVED_ENDPOINT --test http://$ENDPOINT --start 4900000 --stop 4915000 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
+#   script:
+#     - pip3 install -r $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests/requirements.txt "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools"
+#       # run comparsion tests
+#     - cd $CI_PROJECT_DIR/haf/hive/tests/api_tests/comparsion_tests
+#     - python3 -m pytest -n 8 --ref http://$HIVED_ENDPOINT --test http://$ENDPOINT --start 4900000 --stop 4915000 --junitxml=$CI_PROJECT_DIR/comparsion_tests.xml
 
-  artifacts:
-    paths:
-    - "$CI_JOB_NAME"
-    - "**/from_node.log"
-    - "**/ah.log"
-    - "**/*.out.json"
-    - "haf/hive/tests/tests_api/hived/workdir_*"
-    - "comparsion_tests.xml"
-    reports:
-      junit:
-        - comparsion_tests.xml
-  resource_group: ${CI_COMMIT_SHA}
-  tags:
-    - data-cache-storage
+#   artifacts:
+#     paths:
+#     - "$CI_JOB_NAME"
+#     - "**/from_node.log"
+#     - "**/ah.log"
+#     - "**/*.out.json"
+#     - "haf/hive/tests/tests_api/hived/workdir_*"
+#     - "comparsion_tests.xml"
+#     reports:
+#       junit:
+#         - comparsion_tests.xml
+#   resource_group: ${CI_COMMIT_SHA}
+#   tags:
+#     - data-cache-storage
 
-python_comparison_tests:
-  extends: .comparison_tests
+# python_comparison_tests:
+#   extends: .comparison_tests
 
-  needs:
-    - !reference [.comparison_tests, needs]
-    - job: prepare_python_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.comparison_tests, needs]
+#     - job: prepare_python_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
 
-postgrest_comparison_tests:
-  extends: .comparison_tests
+# postgrest_comparison_tests:
+#   extends: .comparison_tests
 
-  needs:
-    - !reference [.comparison_tests, needs]
-    - job: prepare_postgrest_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.comparison_tests, needs]
+#     - job: prepare_postgrest_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
 
-.benchmark_tests:
-  extends: .jmeter_benchmark_with_haf_job
-  stage: test
-  variables:
-    FF_NETWORK_PER_BUILD: 1
-    API_FOR_TESTING: "account_history_api" # alternatively: blocks_api
-    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
-    APP_IMAGE: ""
-    HIVED_UID: $HIVED_UID
-  needs:
-    - job: prepare_haf_data
-      artifacts: true
+# .benchmark_tests:
+#   extends: .jmeter_benchmark_with_haf_job
+#   stage: test
+#   variables:
+#     FF_NETWORK_PER_BUILD: 1
+#     API_FOR_TESTING: "account_history_api" # alternatively: blocks_api
+#     PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
+#     APP_IMAGE: ""
+#     HIVED_UID: $HIVED_UID
+#   needs:
+#     - job: prepare_haf_data
+#       artifacts: true
 
-  script:
-      - /usr/bin/python3 $CI_PROJECT_DIR/tests/integration/hafah-local-tools/tests_api/benchmarks/benchmark.py -a app -p $APP_PORT -c perf_5M_heavy.csv -d $CI_PROJECT_DIR/wdir -n $API_FOR_TESTING
-      - m2u --input wdir/raw_jmeter_report.xml --output wdir/jmeter_junit_report.xml
-      - jmeter -g wdir/jmeter_${APP_PORT}_output.csv -o wdir/dashboard/
-  artifacts:
-    paths:
-      - wdir/
-    reports:
-      junit: wdir/jmeter_junit_report.xml
-  resource_group: ${CI_COMMIT_SHA}
-  tags:
-    - data-cache-storage
+#   script:
+#       - /usr/bin/python3 $CI_PROJECT_DIR/tests/integration/hafah-local-tools/tests_api/benchmarks/benchmark.py -a app -p $APP_PORT -c perf_5M_heavy.csv -d $CI_PROJECT_DIR/wdir -n $API_FOR_TESTING
+#       - m2u --input wdir/raw_jmeter_report.xml --output wdir/jmeter_junit_report.xml
+#       - jmeter -g wdir/jmeter_${APP_PORT}_output.csv -o wdir/dashboard/
+#   artifacts:
+#     paths:
+#       - wdir/
+#     reports:
+#       junit: wdir/jmeter_junit_report.xml
+#   resource_group: ${CI_COMMIT_SHA}
+#   tags:
+#     - data-cache-storage
 
-python_account_history_benchmark_tests:
-  extends: .benchmark_tests
+# python_account_history_benchmark_tests:
+#   extends: .benchmark_tests
 
-  needs:
-    - !reference [.benchmark_tests, needs]
-    - job: prepare_python_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.benchmark_tests, needs]
+#     - job: prepare_python_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
 
-postgrest_block_api_benchmark_tests:
-  extends: .benchmark_tests
+# postgrest_block_api_benchmark_tests:
+#   extends: .benchmark_tests
 
-  needs:
-    - !reference [.benchmark_tests, needs]
-    - job: prepare_postgrest_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.benchmark_tests, needs]
+#     - job: prepare_postgrest_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
-    API_FOR_TESTING: blocks_api
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
+#     API_FOR_TESTING: blocks_api
 
-postgrest_account_history_benchmark_tests:
-  extends: .benchmark_tests
+# postgrest_account_history_benchmark_tests:
+#   extends: .benchmark_tests
 
-  needs:
-    - !reference [.benchmark_tests, needs]
-    - job: prepare_postgrest_hafah_image
-      artifacts: true
+#   needs:
+#     - !reference [.benchmark_tests, needs]
+#     - job: prepare_postgrest_hafah_image
+#       artifacts: true
 
-  variables:
-    APP_IMAGE: $HAFAH_IMAGE_NAME
+#   variables:
+#     APP_IMAGE: $HAFAH_IMAGE_NAME
 
-cleanup_hived_cache_manual:
-  extends: .cleanup_cache_manual
-  stage: cleanup
-  variables:
-    CLEANUP_PATH_PATTERN: "/cache/replay_data_hafah_*"
-  resource_group: ${CI_COMMIT_SHA}
-  tags:
-    - data-cache-storage
+# cleanup_hived_cache_manual:
+#   extends: .cleanup_cache_manual
+#   stage: cleanup
+#   variables:
+#     CLEANUP_PATH_PATTERN: "/cache/replay_data_hafah_*"
+#   resource_group: ${CI_COMMIT_SHA}
+#   tags:
+#     - data-cache-storage
 
-build_and_publish_image:
-  stage: publish
-  extends: .publish_docker_image_template
-  script:
-    - scripts/ci-helpers/build_and_publish_instance.sh
-  tags:
-    - public-runner-docker
+# build_and_publish_image:
+#   stage: publish
+#   extends: .publish_docker_image_template
+#   script:
+#     - scripts/ci-helpers/build_and_publish_instance.sh
+#   tags:
+#     - public-runner-docker
 
 prepare_haf_image_testnet:
   extends: .prepare_haf_image
@@ -396,6 +396,9 @@ hafah_pytest_fuctional_tests:
     DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
     HAFAH_IMAGE_NAME: $CI_REGISTRY_IMAGE/instance:instance-$HAFAH_IMAGE_TAG
   script:
+    - sudo apt-get update
+    - sudo apt-get install -y docker.io
+    - docker context ls
     - ls -la
     - cd /builds/hive/HAfAH
     - ls -la
@@ -411,7 +414,7 @@ hafah_pytest_fuctional_tests:
 
     # run tests
     - cd $CI_PROJECT_DIR/tests/integration/functional
-    - pytest --junitxml report.xml -n ${PYTEST_NUMBER_OF_PROCESSES} --postgrest-image=$HAFAH_IMAGE_NAME
+    - pytest --junitxml report.xml -n ${PYTEST_NUMBER_OF_PROCESSES} -k test_filter_only_hardfork_operations --postgrest-image=$HAFAH_IMAGE_NAME
   artifacts:
     paths:
     - "**/generated_during_*"
@@ -423,3 +426,66 @@ hafah_pytest_fuctional_tests:
   interruptible: true
   tags:
     - hived-for-tests
+
+# docker_tests:
+#   stage: build
+#   services:
+#     - name: registry.gitlab.syncad.com/hive/common-ci-configuration/docker-dind:${DOCKER_DIND_TAG}
+#       alias: docker
+#   script:
+#     - ls -la
+#     - docker context ls
+#   artifacts:
+#     paths:
+#     - "**/generated_during_*"
+#     - "**/generated_by_package_fixtures"
+#     reports:
+#       junit: tests/integration/system/haf/report.xml
+#     when: always
+#     expire_in: 1 week
+#   interruptible: true
+#   tags:
+#     - hived-for-tests
+
+# docker_tests_2:
+#   stage: test
+#   extends: .docker_image_builder_job_template
+
+#   script:
+#     # - export PATH="/home/haf_admin/.local/bin:$PATH"
+#     # - curl -sSL https://install.python-poetry.org | python3 -  # install poetry in isolated environment
+#     - whoami
+#     - cat /etc/os-release
+#     - uname -a
+#     - curl https://pyenv.run | bash
+#     - echo 'export PATH="$HOME/.pyenv/bin:$PATH"' >> ~/.bashrc
+#     - echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+#     - echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
+#     - source ~/.bashrc
+#     - apk add patch
+#     - pyenv install 3.10.0
+#     - pyenv virtualenv 3.10.0 moje_srodowisko
+#     - pyenv activate moje_srodowisko
+#     # - python3 -m venv venv/
+#     # - . venv/bin/activate
+#     - (cd $CI_PROJECT_DIR/haf/hive/tests/hive-local-tools && poetry install)
+#     - (cd $CI_PROJECT_DIR/tests/integration/hafah-local-tools && poetry install)
+
+#     - docker context ls
+#     - docker run --rm hello-world
+#     - docker ps
+
+#     # run tests
+#     - cd $CI_PROJECT_DIR/tests/integration/functional
+#     - pytest --junitxml report.xml -n ${PYTEST_NUMBER_OF_PROCESSES} -k test_docker --postgrest-image=$HAFAH_IMAGE_NAME
+#   artifacts:
+#     paths:
+#     - "**/generated_during_*"
+#     - "**/generated_by_package_fixtures"
+#     reports:
+#       junit: tests/integration/system/haf/report.xml
+#     when: always
+#     expire_in: 1 week
+#   interruptible: true
+#   tags:
+#     - hived-for-tests
