Repair db problem

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -407,7 +407,7 @@ hafah_pytest_fuctional_tests:
 
     # run tests
     - cd $CI_PROJECT_DIR/tests/integration/functional
-    - pytest --junitxml report.xml -n ${PYTEST_NUMBER_OF_PROCESSES} --postgrest-hafah-path=/builds/hive/HAfAH/postgrest/postgrest
+    - pytest --junitxml report.xml -n ${PYTEST_NUMBER_OF_PROCESSES} --postgrest-image=$HAFAH_IMAGE_NAME --postgres-db-url=$DB_URL
   artifacts:
     paths:
     - "**/generated_during_*"
