--- a/scripts/ci-helpers/prepare_data_image_job.yml
+++ b/scripts/ci-helpers/prepare_data_image_job.yml
@@ -1,6 +1,6 @@
 include:
   - project: 'hive/hive'
-    ref: 13e1894b0b4a1ae6d3ec735a9d34194d9b350ef9 #develop
+    ref: 6993deeb250b7e62325f90402f8f9669f88cafba #develop
     file: '/scripts/ci-helpers/prepare_data_image_job.yml' 
 
 .prepare_haf_image:
@@ -17,6 +17,7 @@ include:
     - $SCRIPTS_PATH/ci-helpers/get_image4submodule.sh
         "$SUBMODULE_DIR" registry.gitlab.syncad.com/hive/haf/ "HAF_IMAGE_NAME" "$REGISTRY_USER" "$REGISTRY_PASS"
         --export-binaries="$BINARY_CACHE_PATH" --network-type="$HIVE_NETWORK_TYPE"
+    - chmod -Rc a+rwx "$BINARY_CACHE_PATH"
     - ls -la ./$BINARY_CACHE_PATH/*
 
   artifacts:
