--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,7 +123,7 @@ prepare_postgrest_hafah_image:
     USE_POSTGREST: 1
 
 .pattern_tests:
-  extends: .haf_app_pattern_tests_template 
+  extends: .haf_app_pattern_tests_template
   stage: test
   variables:
     HAF_APP_IMAGE: ""
@@ -143,6 +143,7 @@ prepare_postgrest_hafah_image:
       artifacts: true
 
   before_script:
+    - poetry self update
     - !reference [.haf_app_pattern_tests_template, before_script]
     - echo "HAfAH image name $HAF_APP_IMAGE"
     - echo "HAF image name $HAF_IMAGE_NAME"
