--- a/tests/integration/pytest.ini
+++ b/tests/integration/pytest.ini
@@ -5,3 +5,6 @@ log_level = INFO
 log_format = %(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)
 log_date_format = %Y-%m-%d %H:%M:
 timeout = 3600
+markers =
+    enum_virtual_ops_and_get_ops_in_block
+    get_account_history_and_get_transaction
