--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ variables:
 
   # Variables required by Common CI jobs
   TOX_IMAGE_TAG: "4b62d20dfebebacf51ca8795f3d7c4df2d9b8565"
+  BUILDER_IMAGE_PATH: "registry.gitlab.syncad.com/hive/haf/ci-base-image@sha256:b639fee3a6f7761a8e38777045e65bc012fbd2ad01bf366e5e9211ac765f9629"
 
   # Variables specific to runner (there is single runner cache and there is 5m block_log available)
   DATA_CACHE_HIVE_TEMPLATE: /cache/replay_data_hafah_hived
@@ -101,6 +102,8 @@ prepare_haf_data:
     SOURCE_DIR: $CI_PROJECT_DIR
 
   script:
+    - echo $HAFAH_IMAGE_NAME
+    - echo $SOURCE_DIR
     - |
       scripts/ci-helpers/build_instance.sh
       docker login -u "$HAFAH_CI_IMG_BUILDER_USER" -p "$HAFAH_CI_IMG_BUILDER_PASSWORD" "$REGISTRY"
@@ -131,6 +134,8 @@ prepare_postgrest_hafah_image:
 
     PYTEST_BASED_IMAGE_NAME: ${PYTEST_RUNTIME_IMAGE_NAME}
     POETRY_INSTALL_ROOT_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/hive-local-tools"
+
+    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
 
     TEST_SUITE: "condenser_api_patterns/get_transaction and not get_transaction_hex or account_history_api or condenser_api_patterns/get_account_history or condenser_api_patterns/get_ops_in_block"
     PATTERN_TESTS_DIR: "${CI_PROJECT_DIR}/haf/hive/tests/api_tests/pattern_tests"
@@ -232,7 +237,7 @@ postgrest_comparison_tests:
   variables:
     FF_NETWORK_PER_BUILD: 1
     API_FOR_TESTING: "account_history_api" # alternatively: blocks_api
-    PYTHONPATH: "$CI_PROJECT_DIR/tests/test-tools/package"
+    PYTHONPATH: "$CI_PROJECT_DIR/haf/hive/tests/hive-local-tools/test-tools/package"
     APP_IMAGE: ""
     HIVED_UID: $HIVED_UID
   needs:
@@ -291,3 +296,88 @@ build_and_publish_image:
     - scripts/ci-helpers/build_and_publish_instance.sh
   tags:
     - public-runner-docker
+
+prepare_haf_image_testnet:
+  extends: .prepare_haf_image
+  stage: build
+  variables:
+    SUBMODULE_DIR: "$CI_PROJECT_DIR/haf"
+    REGISTRY_USER: "$CI_IMG_BUILDER_USER"
+    REGISTRY_PASS: $CI_IMG_BUILDER_PASSWORD
+    HIVE_NETWORK_TYPE: testnet
+    BINARY_CACHE_PATH: "haf-testnet-binaries"
+  tags:
+    - public-runner-docker
+    - hived-for-tests
+
+.hfm-only-service: &hfm-only-service
+  name: $HAF_IMAGE_NAME
+  alias: hfm-only-instance
+  variables:
+    # Allow access from any network to eliminate CI IP addressing problems when hfm runs as service
+    PG_ACCESS: |
+                "host    all              haf_admin        0.0.0.0/0    trust"
+                "host    all              haf_app_admin    0.0.0.0/0    trust"
+                "host    all              all              0.0.0.0/0    scram-sha-256"
+  command: ["--execute-maintenance-script=/home/haf_admin/haf/scripts/maintenance-scripts/sleep_infinity.sh"]
+
+.hafah_pytest_fuctional_tests_base:
+  stage: test
+  extends: .pattern_tests
+  needs:
+    - job: prepare_haf_image_testnet
+      artifacts: true
+    - job: prepare_postgrest_hafah_image
+      artifacts: true
+  image: $BUILDER_IMAGE_PATH
+  services:
+    - *hfm-only-service
+    - name: $APP_IMAGE
+      alias: app
+  variables:
+    BINARY_CACHE_PATH: "haf-testnet-binaries"
+    HIVED_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/hived"
+    COMPRESS_BLOCK_LOG_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/compress_block_log"
+    GET_DEV_KEY_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/get_dev_key"
+    CLI_WALLET_PATH: "$CI_PROJECT_DIR/$BINARY_CACHE_PATH/cli_wallet"
+    DB_NAME: haf_block_log
+    DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
+    APP_IMAGE: $HAFAH_IMAGE_NAME
+    POSTGRES_URL: $DB_URL
+  script:
+      # - export PATH="/home/haf_admin/.local/bin:$PATH"
+    - curl -sSL https://install.python-poetry.org | python3 -  # install poetry in isolated environment
+    - python3 -m venv venv/
+    - . venv/bin/activate
+    - (cd $CI_PROJECT_DIR/tests/integration/hafah-local-tools && poetry install)
+
+    # setup postgres and DB for work with hafah
+    - $CI_PROJECT_DIR/scripts/setup_postgres.sh --postgres-url="$DB_URL"
+    - bash ${CI_PROJECT_DIR}/scripts/generate_version_sql.bash ${CI_PROJECT_DIR}
+    - $CI_PROJECT_DIR/scripts/setup_db.sh --postgres-url="$DB_URL"
+
+    # run tests
+    - cd $CI_PROJECT_DIR/tests/integration/functional
+    - pytest --junitxml report.xml --postgrest-hafah-adress=app:$APP_PORT --postgres-db-url=$DB_URL -m $PYTEST_MARK
+  artifacts:
+    paths:
+    - "**/generated_during_*"
+    - "**/generated_by_package_fixtures"
+    reports:
+      junit: tests/integration/system/haf/report.xml
+    when: always
+    expire_in: 1 week
+  interruptible: true
+  resource_group:
+  tags:
+    - hived-for-tests
+
+hafah_pytest_fuctional_tests_part1:
+  extends: .hafah_pytest_fuctional_tests_base
+  variables:
+    PYTEST_MARK: "enum_virtual_ops_and_get_ops_in_block"
+
+hafah_pytest_fuctional_tests_part2:
+  extends: .hafah_pytest_fuctional_tests_base
+  variables:
+    PYTEST_MARK: "get_account_history_and_get_transaction"
