Add pytest-randomly to execute functional tests in random order

--- a/tests/integration/hafah-local-tools/pyproject.toml
+++ b/tests/integration/hafah-local-tools/pyproject.toml
@@ -23,3 +23,4 @@ sqlalchemy = "1.4.25"
 sqlalchemy-utils = "0.37.9"
 test_tools = { path = "test-tools", develop = true }
 haf_local_tools = { path = "../../../haf/tests/integration/haf-local-tools", develop = true }
+pytest-randomly = "^3.15.0"
