If no indexes, delay getting max operation_id until indexes created. Set op_sequence_to 0 if no operations found

--- a/example_deployment/haf_base.yaml
+++ b/example_deployment/haf_base.yaml
@@ -23,7 +23,7 @@ services:
       interval: 10s
       timeout: 2s
       retries: 10
-      start_period: 30s
+      start_period: 72h
 
 volumes:
   haf_datadir:
