restore max_parallel_maintenance_works to default (2)

--- a/docker/postgresql.conf
+++ b/docker/postgresql.conf
@@ -798,7 +798,8 @@ wal_level = minimal
 max_wal_senders = 0
 
 # set to zero to avoid errors related to isufficient disk space on shared memory
-max_parallel_maintenance_workers = 0
+# DLN: set to 2 and see if indexes build faster
+max_parallel_maintenance_workers = 2
 
 # Allows to override above configuration settings
 
